--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 10%;
+    height: 20%;
 }
 .header__left {
     height: 100%;
@@ -10,6 +10,7 @@
     color: navy;
     width: 40%;
     display: inline-block;
+    margin-top: 20px;
 }
 .header__right {
     display: inline-block;
@@ -18,6 +19,7 @@
     position: relative;
     right: -50px;
     height: 100%;
+    margin-left: 20px
 }
 .header__content {
     list-style: none;
@@ -30,27 +32,27 @@
 .main {
     width: 100%;
     height: 700px;
-    display: grid;
-    grid-template-rows: 10% 50% 10% 10%;
-    grid-template-columns: 2fr 1fr 1fr;
-    margin-top: 10px;
+    position: relative;
 }
 .main img {
-    grid-row: 2/4;
-    grid-column: 2/4;
+    width: 50%;
+    height: 60%;
+    position: absolute;
+    right: 0;
+    bottom: 25%;
+    z-index: 2;
 }
 .main__ttl {
-    grid-row: 2/3;
-    grid-column: 1/2;
-    display: flex;
-    align-items: flex-end;
-    font-size: 50px;
-    margin-bottom: 0;
-    position: relative;
-    bottom: -10px;
+    font-size: 60px;
+    font-weight: 100;
+    position: absolute;
+    top: 53%;
 }
 .main__box {
-    grid-row: 3/5;
-    grid-column: 1/3;
+    width: 75%;
+    height: 25%;
     background-color: navy;
+    position: relative;
+    top: 62%;
+    z-index: 1;
 }
